JUDDI-489, using the jboss.server.temp.dir on jboss
git-svn-id: https://svn.apache.org/repos/asf/juddi/trunk@1130586 13f79535-47bb-0310-9956-ffa450edef68